# sql-alchemy-lernen

./: app.py  association_proxy.md  database.db  emp_script.py  everestek_employee_directory_fixed.xlsx  everestek_employee_directory_with_ids.xlsx  filters.py  group_by_and_chaining.py  loading-options.md  model.py  order_by.py  pyproject.toml  small_test.py
1_to_Many_relationship/: database.db  doubts.md  one_2_many.py  query.py  sample.py
